--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slick": "0.29.0",
     "react-tagsinput": "3.19.0",
     "sass": "1.54.4",
+    "typed.js": "^2.0.12",
     "webpack": "5.74.0"
   },
   "scripts": {
