--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@mui/styles": "^5.10.14",
+    "@vercel/analytics": "^0.1.8",
     "animate.css": "4.1.1",
     "classnames": "2.3.1",
     "moment": "2.29.4",
